src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Ivan_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ivan Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ActivePolicyNumber__c</fullName>
        <label>Active Policy Number</label>
        <summaryFilterItems>
            <field>vlocity_ins__Policy__c.vlocity_ins__PolicyStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__Policy__c.vlocity_ins__AccountId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__AgencyBrokerageNumber__c</fullName>
        <label>Agency / Brokerage No.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AgencyCommission__c</fullName>
        <label>Total Commission</label>
        <summarizedField>vlocity_ins__Policy__c.vlocity_ins__AgencyCommission__c</summarizedField>
        <summaryFilterItems>
            <field>vlocity_ins__Policy__c.vlocity_ins__PolicyStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__Policy__c.vlocity_ins__AccountId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CalculatedAddress__c</fullName>
        <description>Formula: A concatenation of billing street, city, state/province and postal code.</description>
        <formula>BillingStreet &amp; BR() &amp; BillingCity &amp; &quot; &quot; &amp; BillingState &amp; &quot; &quot; &amp; BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimSystemStatus__c</fullName>
        <description>Claim processing system status for the group account. For example, “Pending” to denote that the group account is not setup for claim processing.</description>
        <label>Claim System Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__CustomerValue__c</fullName>
        <description>A ranking of the value of this customer to your business expressed in marketing terms such as Gold, Silver, Bronze, Diamond, Platinum.</description>
        <label>Customer Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diamond</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__DateFounded__c</fullName>
        <description>For accounts that are companies, the date when the company was founded.</description>
        <label>Date Founded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DateOfFirstInsurance__c</fullName>
        <label>Date of First Insurance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DirectoryListed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether this customer agrees to be listed in the communication company&apos;s directory (such as a telephone directory).</description>
        <label>Directory Listed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Disclosure1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether this customer is a company that participates in foreign exchange transactions in the course of doing business. Primarily relevant to financial services organizations using Vlocity, but may also be relevant for credit checks.</description>
        <label>Foreign Exchange</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Disclosure2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether this customer is a company in the gaming or gambling business. Primarily relevant to financial services organizations using Vlocity, but may also be relevant for credit checks.</description>
        <label>Gaming or Gambling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Disclosure3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether this customer is a company in the money lending or pawning business. Primarily relevant to financial services organizations using Vlocity, but may also be relevant for credit checks.</description>
        <label>Money Lending/Pawning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EnableAutopay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the customer has opted in to automatic payment. Part of the billing profile of a customer or billing account.</description>
        <label>Enable Autopay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HasCarrierContract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use CMS MA Contract Amendment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsPersonAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED: Vlocity uses the standard IsPersonAccount field instead.</description>
        <label>Is Person Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsRootResolved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in conjunction with RootAccountId__c, this flag is used by the Vlocity TelcoAccount trigger to determine if the RootAccountId__c value has been determined. When false, the RootAccountId__c may not reflect the actual ultimate (or root) parent account of this account.</description>
        <label>Is Root Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MarketSegment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO (Admin Services Only)</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Large Group</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>Mid Sized Group</fullName>
                </value>
                <value>
                    <fullName>Small Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__NPNNumber__c</fullName>
        <label>National Producer Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NetWorth__c</fullName>
        <description>The estimated net worth of this customer. Primarily relevant to financial services organizations using Vlocity, but may also be relevant for credit checks.</description>
        <label>Net Worth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NumberOfCommercialLines__c</fullName>
        <label>Commercial Lines</label>
        <summaryFilterItems>
            <field>vlocity_ins__Policy__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Commercial Lines</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>vlocity_ins__Policy__c.vlocity_ins__PolicyStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__Policy__c.vlocity_ins__AccountId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NumberOfDependents__c</fullName>
        <description>Total count of dependents.</description>
        <label>Dependents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NumberOfEligibles__c</fullName>
        <description>Total count of subscribers and their dependents eligible for the group benefits.</description>
        <label>Eligibles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NumberOfIndividualAnnuity__c</fullName>
        <label>Individual Annuity</label>
        <summaryFilterItems>
            <field>vlocity_ins__Policy__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Individual Annuity</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>vlocity_ins__Policy__c.vlocity_ins__PolicyStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__Policy__c.vlocity_ins__AccountId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NumberOfIndividualLife__c</fullName>
        <label>Individual Life</label>
        <summaryFilterItems>
            <field>vlocity_ins__Policy__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Individual Life</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>vlocity_ins__Policy__c.vlocity_ins__PolicyStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__Policy__c.vlocity_ins__AccountId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NumberOfMedicareBeds__c</fullName>
        <label>No. of Medicare Certified Beds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NumberOfMembers__c</fullName>
        <description>Total count of subscribers and dependents enrolled for the group benefits.</description>
        <label>Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NumberOfPersonalLines__c</fullName>
        <label>Personal Lines</label>
        <summaryFilterItems>
            <field>vlocity_ins__Policy__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Personal Lines</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>vlocity_ins__Policy__c.vlocity_ins__PolicyStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__Policy__c.vlocity_ins__AccountId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NumberOfSubscribers__c</fullName>
        <description>Total count of subscribers.</description>
        <label>Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NumberofProducers__c</fullName>
        <label>No. Producers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartnerTier__c</fullName>
        <label>Partner Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The identity of the party who is the customer or prospect of this account.</description>
        <label>Party</label>
        <referenceTo>vlocity_ins__Party__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PersonContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For consumer accounts where the customer is a person, this field identifies the person who is considered the customer. If the Salesforce Person Accounts feature is used, this field is optional, but would logically point to the contact record built into the Person Account.</description>
        <label>Person Contact Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Person Accounts</relationshipLabel>
        <relationshipName>PersonAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PremiumYear__c</fullName>
        <label>Premium Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryBroker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Producer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Primary Broker)</relationshipLabel>
        <relationshipName>Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the primary person to contact for anything related to this account. For consumers, the primary contact is often the same as the person who is the consumer but need not be. For example, the consumer&apos;s assistant or spouse may be identified as the desired primary contact.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderIdentifier__c</fullName>
        <externalId>true</externalId>
        <label>Provider Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderIsAcceptingNewPatients__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepts new patients</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RatingType__c</fullName>
        <label>Rating Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Age</fullName>
                </value>
                <value>
                    <fullName>Composite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ReferredByContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the contact who referred this account.</description>
        <label>Referred By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Referred By)</relationshipLabel>
        <relationshipName>ReferredAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RelationshipStartDate__c</fullName>
        <label>Relationship Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__SSACountyCode__c</fullName>
        <label>SSA/County Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <description>The status of the customer&apos;s account such as active, inactive, suspended, pending or expired.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__SumOfEmployees__c</fullName>
        <label>No. Employees</label>
        <summarizedField>vlocity_ins__GroupCensus__c.vlocity_ins__CountOfEmployees__c</summarizedField>
        <summaryFilterItems>
            <field>vlocity_ins__GroupCensus__c.vlocity_ins__CensusStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__GroupCensus__c.vlocity_ins__GroupId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SumOfFTE__c</fullName>
        <label>Full Time Equivalent (FTE)</label>
        <summarizedField>vlocity_ins__GroupCensus__c.vlocity_ins__SumOfFte__c</summarizedField>
        <summaryFilterItems>
            <field>vlocity_ins__GroupCensus__c.vlocity_ins__CensusStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__GroupCensus__c.vlocity_ins__GroupId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TaxID__c</fullName>
        <description>A tax identifier for this customer. Limited to 10 characters.</description>
        <label>Tax ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TerminationReason__c</fullName>
        <description>Termination reason for accounts which have been terminated or deactivated. For example in health insurance a group division account may be terminated from claims processing.</description>
        <label>Termination Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TerminationRequestedBy__c</fullName>
        <label>Termination Requested By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalAnnualPremium__c</fullName>
        <label>Total Premium Active Policies</label>
        <summarizedField>vlocity_ins__Policy__c.vlocity_ins__AnnualPremium__c</summarizedField>
        <summaryFilterItems>
            <field>vlocity_ins__Policy__c.vlocity_ins__PolicyStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_ins__Policy__c.vlocity_ins__AccountId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalPremiumAllPolicies__c</fullName>
        <label>Total Premium All Policies</label>
        <summarizedField>vlocity_ins__Policy__c.vlocity_ins__AnnualPremium__c</summarizedField>
        <summaryForeignKey>vlocity_ins__Policy__c.vlocity_ins__AccountId__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Created_Date_View</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts (Created Date)</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__Agency</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>vlocity_ins__AgencyBrokerageNumber__c</columns>
        <columns>vlocity_ins__NPNNumber__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>vlocity_ins__NumberofProducers__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.vlocity_ins__AgencyBrokerage</value>
        </filters>
        <label>Agency/Brokerages</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__Carriers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.vlocity_ins__Carrier</value>
        </filters>
        <label>Carriers</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__Group</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.vlocity_ins__Group</value>
        </filters>
        <label>Groups</label>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__Policyholders</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>vlocity_ins__NumberOfCommercialLines__c</columns>
        <columns>vlocity_ins__NumberOfIndividualAnnuity__c</columns>
        <columns>vlocity_ins__NumberOfIndividualLife__c</columns>
        <columns>vlocity_ins__NumberOfPersonalLines__c</columns>
        <columns>vlocity_ins__TotalAnnualPremium__c</columns>
        <columns>vlocity_ins__AgencyCommission__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_ins__ActivePolicyNumber__c</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filters>
        <label>Policyholders</label>
    </listViews>
    <recordTypes>
        <fullName>vlocity_ins__AgencyBrokerage</fullName>
        <active>true</active>
        <label>Agency/Brokerage</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Carrier</fullName>
        <active>true</active>
        <label>Carrier</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Group</fullName>
        <active>true</active>
        <label>Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__GroupDivision</fullName>
        <active>true</active>
        <label>Group Division</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__MobilePhoneAccount</fullName>
        <active>true</active>
        <label>MobilePhoneAccount</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Pharmacy</fullName>
        <active>true</active>
        <label>Pharmacy</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Provider</fullName>
        <active>true</active>
        <label>Provider</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__ProviderLocation</fullName>
        <active>true</active>
        <label>Provider Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__StandardAccount</fullName>
        <active>true</active>
        <label>Standard Account</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>